Новая заполненная бд + даты

--- a/УЦСБ/templates/autorization.html
+++ b/УЦСБ/templates/autorization.html
@@ -34,7 +34,7 @@
         
         <img class="autorization-background" src="../static/img/autorization-background.svg">
         <div class="login-container">
-
+        <form method="POST">
             <p class="enter">Вход в систему</p>
             <div class="field">
                 <label for="username">Email</label>
@@ -45,13 +45,14 @@
                 <input type="password" name="password" placeholder=" Введите пароль">
                
             </div>
-            
+
             
             <div class="buttons">
                 <input type="submit" name="submit" value="Войти в систему">
                 <a class="password-forgot" href="#" id="forgot">Забыли пароль?</a>
                 
             </div>
+        </form>
             <div id="myModal" class="modal" >
                 <div class="modal-content myclass">
                     <span class="modal-close">&times;</span>
