--- a/УЦСБ/templates/newemployee.html
+++ b/УЦСБ/templates/newemployee.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href={% block style_path %}{% endblock %}>
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -105,7 +105,7 @@
                                                         </select>
                                                     </div>
                                                 </div>
-                                                <button type="submit" class="btn_submit">Следующий шаг</button>
+                                                <button type="submit" class="btn_submit" href="#document">Следующий шаг</button>
                                             </form>
 
                                         </div>
