--- a/УЦСБ/static/css/autorization-style.css
+++ b/УЦСБ/static/css/autorization-style.css
@@ -46,6 +46,7 @@ input[type="text"], input[type="password"]{
     width: 400px;
     height: 50px;
     font-size: 13pt;
+    padding-left: 10px;
     
     
     border: 2px solid #E0E0E0;
