--- a/УЦСБ/templates/newemployee.html
+++ b/УЦСБ/templates/newemployee.html
@@ -98,7 +98,7 @@
                                                             <option value="2">Слесарь-технолог</option>
                                                             <option value="3">Управляющий</option>
                                                             <option value="4">Водитель</option>
-                                                            <option value="5">Грущик</option>
+                                                            <option value="5">Грузчик</option>
                                                             <option value="6">Шахтер</option>
                                                             <option value="7">Охранник</option>
                                                         </select>
